fix input date placeholder on mobile

--- a/app/styles/expenses.css
+++ b/app/styles/expenses.css
@@ -235,6 +235,7 @@
 
   .datepicker::before{
     content: attr(placeholder);
+    display:inline-block;
     margin-right:0.5em;
   }
   
